Recaptcha keys moved
The public and private keys are moved from the config.php file into the
.ini file

--- a/example-config.ini
+++ b/example-config.ini
@@ -16,3 +16,8 @@ database_salt = ""
 smtp_username = ""
 smtp_userpassword = ""
 smtp_host = ""
+
+; Recaptcha keys
+
+recaptcha_publickey = ""
+recaptcha_privatekey = ""
