Removed refeences to the domain and insted use a config file. Also add an output buffer for cleaner error handling.

--- a/example-config.ini
+++ b/example-config.ini
@@ -7,8 +7,6 @@ database_username = ""
 database_userpassword = ""
 database_name = ""
 database_host = ""
-
-; This is the salt used to encrypt assorted thing, use a long random string
 database_salt = ""
 
 ; SMTP server connection values
@@ -21,3 +19,7 @@ smtp_host = ""
 
 recaptcha_publickey = ""
 recaptcha_privatekey = ""
+
+; Server domain
+
+site_URL = "http://rollerderbytestomatic.com/"
