--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,7 +1,9 @@
 AddHandler php5-script .php
 
 <FilesMatch "\.(gif|css)$">
-Header set Cache-Control "max-age=172800, proxy-revalidate"
+Header set Expires "15 Apr 2022 20:00:00 GMT"
+Header unset ETag
+FileETag None
 </FilesMatch>
 
 RewriteEngine on
