--- a/html/.htaccess
+++ b/html/.htaccess
@@ -12,6 +12,7 @@ RewriteRule ajax.php(.+)? ajax.php$1 [L]
 RewriteRule cron.php(.+)? cron.php$1 [L]
 RewriteRule css/(.+)? css/$1 [L]
 RewriteRule images/(.+)? images/$1 [L]
+RewriteRule js/(.+)? js/$1 [L]
 
 RewriteRule stats.php(.+)? index.php$1 [L]
 RewriteRule poll.php(.+)? index.php$1 [L]
