testing DataDog for monitoring

--- a/app/example-config.ini
+++ b/app/example-config.ini
@@ -7,6 +7,7 @@ database_username = ""
 database_userpassword = ""
 database_name = ""
 database_host = ""
+
 database_salt = ""
 
 ; SMTP server connection values
@@ -18,3 +19,8 @@ smtp_host = ""
 ; Server domain
 
 site_URL = "http://rollerderbytestomatic.com/"
+
+; DataDog information
+
+datadog_apiKey = ""
+datadog_appKey = ""
