--- a/codeception.yml
+++ b/codeception.yml
@@ -11,7 +11,7 @@ settings:
 modules:
     config:
         Db:
-            dsn: ''
-            user: ''
+            dsn: 'mysql:host=localhost;dbname=rdtom_local'
+            user: 'root'
             password: ''
             dump: tests/_data/dump.sql
