--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,12 @@ machine:
   environment:
     ENVIRONMENT: development
 
+dependencies:
+  post:
+    - cp ~/RDTOM-Source/config/custom.ini /etc/apache2/sites-available
+    - a2ensite custom.ini
+    - sudo service apache2 restart
+
 test:
   post:
     - ./run_tests
