working with circle

--- a/config/custom.ini
+++ b/config/custom.ini
@@ -5,6 +5,7 @@ Listen 8080
 
   DocumentRoot /home/ubuntu/RDTOM-Source/html
   ServerName dev.rollerderbytestomatic.com
+  DirectoryIndex index.php
   <FilesMatch \.php$>
     SetHandler application/x-httpd-php
   </FilesMatch>
