working with circle

--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ machine:
 
 dependencies:
   post:
+    - sudo service apache2 stop
     - cp ~/RDTOM-Source/config/custom.ini /etc/apache2/sites-available
     - a2ensite custom.ini
     - sudo service apache2 restart
