--- a/codeception.yml
+++ b/codeception.yml
@@ -15,3 +15,5 @@ modules:
             user: 'root'
             password: ''
             dump: tests/_data/dump.sql
+        WebDriver:
+            port: '8080'
