--- a/config/custom.ini
+++ b/config/custom.ini
@@ -1,6 +1,6 @@
 Listen 8080
 
-<VirtualHost *>
+<VirtualHost *:8080>
   LoadModule php5_module /home/ubuntu/.phpenv/versions/PHP_VERSION/libexec/libphp5.so
 
   DocumentRoot /home/ubuntu/RDTOM-Source
