working with circle

--- a/config/custom.ini
+++ b/config/custom.ini
@@ -4,7 +4,7 @@ Listen 8080
   LoadModule php5_module /home/ubuntu/.phpenv/versions/PHP_VERSION/libexec/libphp5.so
 
   DocumentRoot /home/ubuntu/RDTOM-Source
-  ServerName dev.rollerderbytestomatic.com
+  ServerName localhost
   <FilesMatch \.php$>
     SetHandler application/x-httpd-php
   </FilesMatch>
