--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
     ENVIRONMENT: development
 
 dependencies:
-  post:
+  pre:
     - cp ~/RDTOM-Source/config/custom.ini /etc/apache2/sites-available
     - a2ensite custom.ini
     - sudo service apache2 restart
