working with circle

--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -1,7 +1,7 @@
 Listen 8080
 
 <VirtualHost *:8080>
-  LoadModule php5_module /home/ubuntu/.phpenv/versions/PHP_VERSION/libexec/libphp5.so
+  LoadModule php5_module /home/ubuntu/.phpenv/versions/5.5.7/libexec/libphp5.so
 
   DocumentRoot /home/ubuntu/RDTOM-Source
   ServerName localhost
