--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,7 @@ dependencies:
 
 test:
   post:
+    - sudo service apache2 restart	
     - php codecept.phar run acceptance --steps
     - ./show_output
 
