tinkering with circle to get acceptance tests working

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -11,4 +11,4 @@ modules:
         - AcceptanceHelper
     config:
         PhpBrowser:
-            url: 'http://dev.rollerderbytestomatic.com/'
+            url: 'http://localhost/'
