--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,8 @@ machine:
 
 dependencies:
   post:
-    - cp ~/RDTOM-Source/tests/config/dev.rollerderbytestomatic.com /etc/apache2/sites-available
-    - a2ensite dev.rollerderbytestomatic.com
+    - cp ~/RDTOM-Source/tests/config/localhost /etc/apache2/sites-available
+    - a2ensite localhost
     - sudo service apache2 restart
 
 test:
