--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -1,11 +1,14 @@
-Listen 8080
+Listen 80
 
-<VirtualHost *:8080>
+<VirtualHost *:80>
 
   DocumentRoot /home/sausage/workspace/RDTOM-Source/html
-
+  
+  ServerName rdtom
   <FilesMatch \.php$>
     SetHandler application/x-httpd-php
   </FilesMatch>
-
+  <Directory "/home/sausage/workspace/RDTOM-Source/html">
+  	Require all granted 
+  </Directory>
 </VirtualHost>
