Now updating conf for CircleCi to play nice

--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,9 @@ machine:
 
 dependencies:
   post:
-    - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
+    - sudo cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - sudo a2ensite rdtom
+    - sudo echo "127.0.0.1 rdtom" >> /etc/hosts
     - sudo service apache2 restart
 
 test:
