Now updating conf for CircleCi to play nice

--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ machine:
 
 dependencies:
   post:
+    - sudo a2dissite default
     - sudo cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - sudo a2ensite rdtom
     - ls /etc/apache2/sites-available
