Now updating conf for CircleCi to play nice

--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -3,12 +3,15 @@ Listen 80
 <VirtualHost *:80>
 
   DocumentRoot /home/sausage/workspace/RDTOM-Source/html
-  ServerName rdtom
-  
+
   <FilesMatch \.php$>
     SetHandler application/x-httpd-php
   </FilesMatch>
   <Directory "/home/sausage/workspace/RDTOM-Source/html">
   	Require all granted 
+  </Directory>
+  <Directory />
+    Options FollowSymLinks
+    AllowOverride All
   </Directory>
 </VirtualHost>
