Now updating conf for CircleCi to play nice

--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -3,6 +3,7 @@ Listen 80
 <VirtualHost *:80>
 
   DocumentRoot /home/sausage/workspace/RDTOM-Source/html
+  DirectoryIndex index.php
 
   <FilesMatch \.php$>
     SetHandler application/x-httpd-php
