--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
     - a2ensite rdtom
     - a2enmod rewrite
     - a2enmod headers
-    - service apache2 restart
+    - sudo service apache2 restart
 
 test:
   post:
