--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ machine:
 
 dependencies:
   post:
+    - a2dissite default
     - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - a2ensite rdtom
     - a2enmod rewrite
