--- a/circle.yml
+++ b/circle.yml
@@ -9,10 +9,10 @@ machine:
 dependencies:
   post:
     - a2dissite default
-    - rf /etc/apache2/sites-available/default
+    - rm /etc/apache2/sites-available/default
     - sudo service apache2 reload
-    - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - less /etc/apache2/sites-available &
+    - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - a2ensite rdtom
     - sudo service apache2 restart
 
