--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - a2dissite default
     - rm /etc/apache2/sites-available/default
     - sudo service apache2 reload
-    - less /etc/apache2/sites-available &
+    - ls /etc/apache2/sites-available
     - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - a2ensite rdtom
     - sudo service apache2 restart
