Now updating conf for CircleCi to play nice

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -11,4 +11,4 @@ modules:
         - AcceptanceHelper
     config:
         PhpBrowser:
-            url: 'http://rdtom/'
+            url: 'http://rdtom:8080'
