Now updating conf for CircleCi to play nice

--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,8 @@ dependencies:
   post:
     - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - a2ensite rdtom
+    - a2enmod rewrite
+    - a2enmod headers
     - sudo service apache2 restart
 
 test:
