--- a/codeception.yml
+++ b/codeception.yml
@@ -11,7 +11,7 @@ settings:
 modules:
     config:
         Db:
-            dsn: 'mysql:host=127.0.0.1;dbname=rdtom_local'
+            dsn: 'mysql:host=127.0.0.1;dbname=circle_test'
             user: 'ubuntu'
             password: ''
             dump: tests/_data/dump.sql
