--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -10,5 +10,6 @@ Listen 8080
   </FilesMatch>
   <Directory "/home/sausage/workspace/RDTOM-Source/html">
   	Require all granted 
+  	AllowOverride All
   </Directory>
 </VirtualHost>
