--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -2,12 +2,15 @@ Listen 8080
 
 <VirtualHost *:8080>
 
+
   DocumentRoot /home/sausage/workspace/RDTOM-Source/html
+  ServerName rdtom
   DirectoryIndex index.php
 
   <FilesMatch \.php$>
     SetHandler application/x-httpd-php
   </FilesMatch>
+
   <Directory "/home/sausage/workspace/RDTOM-Source/html">
   	Require all granted 
   	AllowOverride All
