--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -1,6 +1,7 @@
 Listen 8080
 
 <VirtualHost *:8080>
+  LoadModule php5_module /home/ubuntu/.phpenv/versions/PHP_VERSION/libexec/libphp5.so
 
   DocumentRoot /home/sausage/workspace/RDTOM-Source/html
   ServerName rdtom
