--- a/circle.yml
+++ b/circle.yml
@@ -8,10 +8,10 @@ machine:
 
 dependencies:
   post:
+    - rm /etc/apache2/sites-available/rdtom
+    - a2dissite rdtom
     - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - a2ensite rdtom
-    - a2enmod rewrite
-    - a2enmod headers
     - sudo service apache2 restart
 
 database:
