--- a/circle.yml
+++ b/circle.yml
@@ -8,8 +8,8 @@ machine:
 
 dependencies:
   post:
-    - rm /etc/apache2/sites-available/rdtom
-    - a2dissite rdtom
+    - a2enmod rewrite
+    - a2enmod headers
     - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - a2ensite rdtom
     - sudo service apache2 restart
