--- a/circle.yml
+++ b/circle.yml
@@ -10,9 +10,9 @@ dependencies:
   post:
     - a2enmod rewrite
     - a2enmod headers
-    - cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
+    - cp ~/RDTOM-Source/tests/config/rdtom.conf /etc/apache2/sites-available
     - a2ensite rdtom
-    - sudo service apache2 restart
+    - service apache2 restart
 
 database:
   override:
