--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,14 +1,18 @@
 AddHandler php5-script .php
 
-<FilesMatch "\.(js|css|xml|gz)$">
-  Header append Vary: Accept-Encoding
-</FilesMatch>
+<IfModule mod_headers.c>
+  <FilesMatch "\.(js|css|xml|gz)$">
+    Header append Vary: Accept-Encoding
+  </FilesMatch>
+</IfModule>
 
-RewriteEngine On
 
-RewriteBase /
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+    RewriteEngine On
+
+    RewriteBase /
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule . /index.php [L]
+
 
 ErrorDocument 404 /404
