--- a/html/.htaccess
+++ b/html/.htaccess
@@ -6,13 +6,13 @@ AddHandler php5-script .php
   </FilesMatch>
 </IfModule>
 
-
+<IfModule mod_rewrite.c>
     RewriteEngine On
-
+    
     RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule . /index.php [L]
-
+</IfModule>
 
 ErrorDocument 404 /404
