--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,18 +1,23 @@
 AddHandler php5-script .php
 
-<IfModule mod_headers.c>
-  <FilesMatch "\.(js|css|xml|gz)$">
-    Header append Vary: Accept-Encoding
-  </FilesMatch>
-</IfModule>
+<FilesMatch "\.(js|css|xml|gz)$">
+  Header append Vary: Accept-Encoding
+</FilesMatch>
 
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    
-    RewriteBase /
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.php [L]
-</IfModule>
+RewriteEngine on
+
+RewriteRule ajax.php(.+)? ajax.php$1 [L]
+RewriteRule cron.php(.+)? cron.php$1 [L]
+RewriteRule css/(.+)? css/$1 [L]
+RewriteRule images/(.+)? images/$1 [L]
+RewriteRule js/(.+)? js/$1 [L]
+
+RewriteRule stats.php(.+)? index.php$1 [L]
+RewriteRule poll.php(.+)? index.php$1 [L]
+RewriteRule allquestions.php(.+)? index.php$1 [L]
+
+RewriteRule ^api(.+)? index.php [NC,QSA,L]
+
+RewriteRule ^([^\.]+)?$ index.php [NC,QSA,L]
 
 ErrorDocument 404 /404
