--- a/html/.htaccess
+++ b/html/.htaccess
@@ -4,20 +4,11 @@ AddHandler php5-script .php
   Header append Vary: Accept-Encoding
 </FilesMatch>
 
-RewriteEngine on
+RewriteEngine On
 
-RewriteRule ajax.php(.+)? ajax.php$1 [L]
-RewriteRule cron.php(.+)? cron.php$1 [L]
-RewriteRule css/(.+)? css/$1 [L]
-RewriteRule images/(.+)? images/$1 [L]
-RewriteRule js/(.+)? js/$1 [L]
-
-RewriteRule stats.php(.+)? index.php$1 [L]
-RewriteRule poll.php(.+)? index.php$1 [L]
-RewriteRule allquestions.php(.+)? index.php$1 [L]
-
-RewriteRule ^api(.+)? index.php [NC,QSA,L]
-
-RewriteRule ^([^\.]+)?$ index.php [NC,QSA,L]
+RewriteBase /
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
 
 ErrorDocument 404 /404
