Tinkering with config

--- a/html/.htaccess
+++ b/html/.htaccess
@@ -6,11 +6,10 @@ AddHandler php5-script .php
 
 RewriteEngine on
 
-RewriteRule ^([^\.]+)?$ index.php [NC,QSA,L]
 
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule ^(.*)$ index.php [NC,QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php [NC,QSA,L]
 
 #RewriteRule ajax.php(.+)? ajax.php$1 [L]
 #RewriteRule cron.php(.+)? cron.php$1 [L]
@@ -19,6 +18,7 @@ RewriteRule ^([^\.]+)?$ index.php [NC,QSA,L]
 #RewriteRule js/(.+)? js/$1 [L]
 
 #RewriteRule ^api(.+)? index.php [NC,QSA,L]
+#RewriteRule ^([^\.]+)?$ index.php [NC,QSA,L]
 
 
 ErrorDocument 404 /404
