--- a/codeception.yml
+++ b/codeception.yml
@@ -9,7 +9,11 @@ settings:
     colors: true
     memory_limit: 1024M
 modules:
+    enabled: [Selenium2]
     config:
+        Selenium2:
+            url: 'http://localhost:8080/'
+            browser: phantomjs
         Db:
             dsn: 'mysql:host=127.0.0.1;dbname=circle_test'
             user: 'ubuntu'
