--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,7 +8,11 @@ class_name: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser
+        - WebDriver
         - AcceptanceHelper
     config:
         PhpBrowser:
             url: 'http://rdtom:8080'
+        WebDriver:
+            url: 'http://rdtom:8080'
+            browser: phantomjs
