--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ machine:
   post: 
     - phantomjs webdriver=4444:
         background: true
-        sleep: 5
+    - sleep 5
 
 dependencies:
   post:
