--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
   hosts:
     rdtom: 127.0.0.1
   pre: 
-    - phantomjs webdriver=4444
+    - phantomjs --webdriver=4444
 
 dependencies:
   post:
