--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -12,4 +12,4 @@ modules:
     config:
         WebDriver:
             url: 'http://rdtom:8080'
-            browser: phantomjs
+            browser: zombiejs
