--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -11,7 +11,7 @@ Listen 8080
     SetHandler application/x-httpd-php
   </FilesMatch>
 
-  <Directory /home/sausage/workspace/RDTOM-Source/html/>
+  <Directory "/home/sausage/workspace/RDTOM-Source/html/">
   	Require all granted 
   	AllowOverride All
   </Directory>
