--- a/html/.htaccess
+++ b/html/.htaccess
@@ -6,8 +6,8 @@ AddHandler php5-script .php
 
 RewriteEngine on
 
-RewriteBase /
-RewriteCond %{REQUEST_URI} !-f
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [NC,QSA,L]
 
 ErrorDocument 404 /404
