tinkering with htaccess to work with public subdirectories on circle

--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -10,7 +10,7 @@ Listen 8080
     SetHandler application/x-httpd-php
   </FilesMatch>
 
-  <Directory "/home/sausage/workspace/RDTOM-Source/html/">
+  <Directory />
   	Require all granted 
   	AllowOverride All
   </Directory>
