tinkering with htaccess to work with public subdirectories on circle

--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -1,5 +1,6 @@
 Listen 8080
 
+<VirtualHost *:8080>
   LoadModule php5_module /home/ubuntu/.phpenv/versions/PHP_VERSION/libexec/libphp5.so
 
   DocumentRoot /home/sausage/workspace/RDTOM-Source/html
@@ -14,3 +15,4 @@ Listen 8080
   	Require all granted 
   	AllowOverride All
   </Directory>
+</VirtualHost>
