--- a/html/.htaccess
+++ b/html/.htaccess
@@ -6,8 +6,15 @@ AddHandler php5-script .php
 
 RewriteEngine on
 
+RewriteCond %{REQUEST_URI} "/js/" [OR]
+RewriteCond %{REQUEST_URI} "/css/"[OR]
+RewriteCond %{REQUEST_URI} "/images/"[OR]
+RewriteCond %{REQUEST_URI} "/robots.txt"[OR]
+RewriteCond %{REQUEST_URI} "/cron.php"[OR]
+RewriteCond %{REQUEST_URI} "/ajax.php"
+RewriteRule (.*) $1 [L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [NC,QSA,L]
 
 ErrorDocument 404 /404
