--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -11,8 +11,10 @@ Listen 8080
     SetHandler application/x-httpd-php
   </FilesMatch>
 
-  <Directory />
-  	Require all granted 
+  <Directory /home/sausage/workspace/RDTOM-Source/html>
+Order allow,deny
+Allow from all
+Require all granted
   	AllowOverride All
   </Directory>
 </VirtualHost>
