--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ dependencies:
     - sudo a2enmod rewrite
     - sudo a2enmod headers
     - sudo a2enmod
+    - sudo a2enmod authn_default
     - sudo cp ~/RDTOM-Source/tests/config/rdtom /etc/apache2/sites-available
     - sudo a2ensite rdtom
     - sudo service apache2 restart
