--- a/tests/config/rdtom.conf
+++ b/tests/config/rdtom.conf
@@ -1,5 +1,7 @@
 Listen 8080
 
+#For apache2 2.4
+
 <VirtualHost *:8080>
   LoadModule php5_module /home/ubuntu/.phpenv/versions/PHP_VERSION/libexec/libphp5.so
 
@@ -12,9 +14,9 @@ Listen 8080
   </FilesMatch>
 
   <Directory /home/sausage/workspace/RDTOM-Source/html>
-Order allow,deny
-Allow from all
-Require all granted
+    Order allow,deny
+    Allow from all
+    Require all granted
   	AllowOverride All
   </Directory>
 </VirtualHost>
