adding force drop database

--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,7 @@ dependencies:
 
 database:
   override:
+    - mysql -u ubuntu -e "drop database circle_test" || true
     - mysql -u ubuntu circle_test < tests/_data/dump.sql
 
 test:
