--- a/app/example-config.ini
+++ b/app/example-config.ini
@@ -1,7 +1,8 @@
 ; This is the config file for the Roller Derby Test O'Matic
 ; This file is parsed and the values saved in global variables in config.php
+; Rename this file config.ini to use
 
-; Database connection values
+; mySQL database connection values
 
 database_username = ""
 database_userpassword = ""
